<resources>
    <string name="app_name">ExamenT1</string>

    <string name="nombre_res">Restaurante David de Andrés</string>

    <string name="dos_asientos">2 asientos</string>
    <string name="cuatro_asientos">4 asientos</string>
    <string name="ocho_asientos">8 asientos</string>

    <string name="introduce_nombre">Introduce tu nombre</string>

    <string name="name">Name...</string>

</resources>